--- a/src/scss/elements.scss
+++ b/src/scss/elements.scss
@@ -208,7 +208,7 @@ header,
 header.sticky,
 .header.sticky {
   position: sticky;
-  z-index: 100;
+  z-index: 10;
   top: 0px;
   margin-top: 0px;
   margin-left: 0px;
@@ -682,7 +682,7 @@ input[type="checkbox"]:checked {
   display: flex;
   align-items: center;
   justify-content: center;
-  z-index: 200;
+  z-index: 101;
   position: fixed;
   top: 0px;
   left: 0px;
@@ -693,7 +693,7 @@ input[type="checkbox"]:checked {
 .modal::before {
   content: "";
   position: fixed;
-  z-index: 180;
+  z-index: 101;
   top: 0px;
   left: 0px;
   width: 100vw;
@@ -703,7 +703,7 @@ input[type="checkbox"]:checked {
 }
 
 .modal > .content {
-  z-index: 200;
+  z-index: 102;
   min-width: 40vw;
   width: auto;
   max-width: 90vw;
@@ -741,7 +741,7 @@ input[type="checkbox"]:checked {
 .dropdown .content {
   display: none;
   position: absolute;
-  z-index: 1;
+  z-index: 20;
   flex-direction: column;
   align-items: stretch;
   gap: 0.4rem;
